--- a/package.json
+++ b/package.json
@@ -10,11 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.4.1",
+    "@mui/material": "^6.4.1",
+    "bootstrap": "^5.3.3",
+    "formik": "^2.4.6",
+    "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.469.0",
     "react": "^18.3.1",
     "react-apexcharts": "^1.7.0",
+    "react-bootstrap": "^2.10.8",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.1.1"
+    "react-router-dom": "^7.1.1",
+    "yahoo-finance": "^0.3.8",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
